test/Fail/UnusedPatternSynonymVariable.err
UnusedPatternSynonymVariable.agda:7.11-12: error: [UnusedVariableInPatternSynonym]
Unused variable in pattern synonym: x
when scope checking the declaration
  pattern p x = c
